<resources>
    <string name="app_name">骆发茂的APP</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_playvideo">playvideo</string>
    <string name="title_message">message</string>
    <string name="ActionBarDrawerToggle">Live圈</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">by:骆发茂</string>
    <string name="nav_header_subtitle">Email:2209309676@qq.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">first_page</string>
    <string name="menu_gallery">second_page</string>
    <string name="menu_slideshow">third_page</string>


    <style name="noActionBar">
        <item name="windowNoTitle">true</item>
        <item name="windowActionBar">false</item>
    </style>
</resources>